# linux_epoll_library

./: Dockerfile  server.cpp
.github/workflows/: github-actions-demo.yml
DummyClient/: DummyClient.cpp  client
GameServer/: CMakeLists.txt  main.cpp
GameServer/Conetent/: ClientPacketHandler.cpp  ClientPacketHandler.h  GameSession.cpp  SessionManager.cpp
GameServer/Content/: ClientPacketHandler.cpp  ClientPacketHandler.h  GameSession.cpp  GameSession.h  Room.cpp  Room.h  SessionManager.h  User.cpp  User.h
GameServer/Core/: CoreGlobal.cpp  CoreGlobal.h  CoreHeader.h  CoreMacro.h  CoreTLS.cpp  CoreTLS.h  Types.h
GameServer/Job/: Job.cpp  Job.h  JobQueue.cpp  JobQueue.h  PacketQueue.cpp  PacketQueue.h
GameServer/Memory/: Allocator.cpp  Allocator.h  Container.h  Memory.cpp  Memory.h  MemoryPool.cpp  MemoryPool.h
GameServer/Network/: EpollManager.cpp  EpollManager.h  RecvBuffer.cpp  RecvBuffer.h  SendBuffer.cpp  SendBuffer.h  Session.cpp  Session.h  SocketManager.cpp  SocketManager.h
GameServer/Protocol/: Enum.pb.cc  Enum.pb.h  Enum.proto  GenPackets.sh  Protocol.pb.cc  Protocol.pb.h  Protocol.proto
GameServer/Redis/: RedisClient.cpp  RedisClient.h
GameServer/Thread/: Lock.cpp  Lock.h  ThreadManager.cpp  ThreadManager.h
GameServer/Util/: BufferReader.cpp  BufferReader.h  BufferWriter.cpp  BufferWriter.h  LockQueue.h
